--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</head>
 
 	<body>
-	<header class="navbar navbar-expand-md">
+	<header class="navbar">
 		<div class="navbar-header">
 			<a class="navbar-brand" href="https://www.catchplay.com/">
 				<img src="images/icons/cpod-logo.png" alt="catchplaylogo">
