--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
 		<meta name="description" content="">
+		<link rel="icon" href="images/icons/favicon.ico">
 		<meta name="author" content="Lulu Lee">
 		<link rel="icon" href="favicon-.ico">
 		<title>Coco</title>
@@ -72,7 +73,7 @@
 	</header>
 	<div class="img"></div>	
 	<div class="middletitle">	
-		<div class="middletitle__left">
+		<div class="middletitle__left">、
 			<img style="width: 100%" src="images/images/flower-left.png" alt="title__1">
 		</div>
 		<div class="middletitle__middle" >
@@ -125,7 +126,7 @@
 		</div>	
 	</div>	
 	<div class="movie">
-		<div class="movie__card movie__card__1">
+		<div class="movie__card movie__card__1 slide">
 			<a href="https://www.catchplay.com/tw/video-23224254-d5b3-4c00-abf5-7759beb78362">
 				<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0219/artworks/posters/DIS-TW-001-A0219-P1200.jpg">
 				<img class="movie__hover" src="images/icons/cp-play-btn.svg">
@@ -189,58 +190,52 @@
 	<div class="movie__mobile">
 			<div class="center">
 				<div class="movie__card movie__card__1">
-						<a href="https://www.catchplay.com/tw/video-23224254-d5b3-4c00-abf5-7759beb78362">
-							<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0219/artworks/posters/DIS-TW-001-A0219-P1200.jpg">
-							<div class="movie__content">
-								<h4>可可夜總會（英語）</h4>
-								<p class="movie__des">全球7億美金票房保證，金球獎最佳動畫長片得主、奧斯卡最佳動畫長片、原創歌曲入圍，皮克斯再創奇幻冒險高峰，帶來笑中有淚的家庭團聚故事，【冰雪奇緣】奧斯卡金獎作曲夫妻檔再次打造洗腦電影主題曲。</p>
-							</div>	
-						</a>
+						<a href="https://www.catchplay.com/tw/video-23224254-d5b3-4c00-abf5-7759beb78362"></a>
+						<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0219/artworks/posters/DIS-TW-001-A0219-P1200.jpg">
+						<div class="movie__content">
+							<h4>可可夜總會（英語）</h4>
+							<p class="movie__des">全球7億美金票房保證，金球獎最佳動畫長片得主、奧斯卡最佳動畫長片、原創歌曲入圍，皮克斯再創奇幻冒險高峰，帶來笑中有淚的家庭團聚故事，【冰雪奇緣】奧斯卡金獎作曲夫妻檔再次打造洗腦電影主題曲。</p>
+						</div>	
 				</div>
 				<div class="movie__card movie__card__2">
-						<a href="https://www.catchplay.com/video-ad69147c-f383-4977-bf10-deb9fe944778">
-							<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0223/artworks/posters/DIS-TW-001-A0223-P1200.jpg">
-							<div class="movie__content">
-								<h4>可可夜總會（國語）</h4>
-								<p class="movie__des">全球7億美金票房保證，金曲歌王蕭敬騰配音骷顱人並獻唱片中3首歌曲、奧斯卡最佳動畫長片、原創歌曲入圍，皮克斯以墨西哥亡靈節為背景，帶來笑中有淚的家庭團聚故事，【冰雪奇緣】奧斯卡金獎作曲夫妻檔再次打造洗腦電影主題曲。</p>
-							</div>	
-						</a>
+						<a href="https://www.catchplay.com/video-ad69147c-f383-4977-bf10-deb9fe944778"></a>
+						<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0223/artworks/posters/DIS-TW-001-A0223-P1200.jpg">
+						<div class="movie__content">
+							<h4>可可夜總會（國語）</h4>
+							<p class="movie__des">全球7億美金票房保證，金曲歌王蕭敬騰配音骷顱人並獻唱片中3首歌曲、奧斯卡最佳動畫長片、原創歌曲入圍，皮克斯以墨西哥亡靈節為背景，帶來笑中有淚的家庭團聚故事，【冰雪奇緣】奧斯卡金獎作曲夫妻檔再次打造洗腦電影主題曲。</p>
+						</div>	
 				</div>
 				<div class="movie__card movie__card__3">
-						<a href="https://www.catchplay.com/video-XVHJ9QD0-iVJT-52Yq-6m5S-MTdQYkkHH9JB">
-							<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0221/artworks/posters/DIS-TW-001-A0221-P1200.jpg">
-							<div class="movie__content">
-								<h4>雪寶的佳節冒險（國語）</h4>
-								<p class="movie__des">跟著迪士尼史上最賣座動畫電影【冰雪奇緣】主人翁艾莎女王、安娜公主一起找尋聖誕節的真諦！本片還超值附贈長達46分鐘的迪士尼聖誕經典短片，包括米奇、唐老鴨、與高飛狗等迪士尼巨星齊聚，帶給全家大小一段難忘的冬日美好時光。</p>
-							</div>	
-						</a>
+						<a href="https://www.catchplay.com/video-XVHJ9QD0-iVJT-52Yq-6m5S-MTdQYkkHH9JB"></a>
+						<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0221/artworks/posters/DIS-TW-001-A0221-P1200.jpg">
+						<div class="movie__content">
+							<h4>雪寶的佳節冒險（國語）</h4>
+							<p class="movie__des">跟著迪士尼史上最賣座動畫電影【冰雪奇緣】主人翁艾莎女王、安娜公主一起找尋聖誕節的真諦！本片還超值附贈長達46分鐘的迪士尼聖誕經典短片，包括米奇、唐老鴨、與高飛狗等迪士尼巨星齊聚，帶給全家大小一段難忘的冬日美好時光。</p>
+						</div>
 				</div>
 				<div class="movie__card movie__card__4">
-						<a href="https://www.catchplay.com/video-mgxAqgg1-kpGL-BtfO-EsC7-cbnk22uSVNMa">
-							<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0222/artworks/posters/DIS-TW-001-A0222-P1200.jpg">
-							<div class="movie__content">
-								<h4>雪寶的佳節冒險（英語）</h4>
-								<p class="movie__des">跟著迪士尼史上最賣座動畫電影【冰雪奇緣】主人翁艾莎女王、安娜公主一起找尋聖誕節的真諦！本片還超值附贈長達46分鐘的迪士尼聖誕經典短片，包括米奇、唐老鴨、與高飛狗等迪士尼巨星齊聚，帶給全家大小一段難忘的冬日美好時光。</p>
-							</div>	
-						</a>
+						<a href="https://www.catchplay.com/video-mgxAqgg1-kpGL-BtfO-EsC7-cbnk22uSVNMa"></a>
+						<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0222/artworks/posters/DIS-TW-001-A0222-P1200.jpg">
+						<div class="movie__content">
+							<h4>雪寶的佳節冒險（英語）</h4>
+							<p class="movie__des">跟著迪士尼史上最賣座動畫電影【冰雪奇緣】主人翁艾莎女王、安娜公主一起找尋聖誕節的真諦！本片還超值附贈長達46分鐘的迪士尼聖誕經典短片，包括米奇、唐老鴨、與高飛狗等迪士尼巨星齊聚，帶給全家大小一段難忘的冬日美好時光。</p>
+						</div>
 				</div>
 				<div class="movie__card movie__card__5">
-						<a href="https://www.catchplay.com/video-5QmHfop5-4uIp-QPXA-QO7j-T5fch1SOIrl8">
-							<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0211/artworks/posters/DIS-TW-001-A0211-P1200.jpg">
-							<div class="movie__content">
-								<h4>冰雪奇緣（國語）</h4>
-								<p class="movie__des">史上最高票房動畫片，橫掃全球12.7億美元，迪士尼顛峰作品，奧斯卡與金球獎最佳動畫長片贏家，奧斯卡主題曲「Let It Go」家喻戶曉，國語版由Janet謝怡芬配音安娜、搞笑天王阿Ken獻聲雪寶、「星光幫」劉軒蓁、林芯儀聯手配唱多首名曲。</p>
-							</div>	
-						</a>
+						<a href="https://www.catchplay.com/video-5QmHfop5-4uIp-QPXA-QO7j-T5fch1SOIrl8"></a>
+						<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0211/artworks/posters/DIS-TW-001-A0211-P1200.jpg">
+						<div class="movie__content">
+							<h4>冰雪奇緣（國語）</h4>
+							<p class="movie__des">史上最高票房動畫片，橫掃全球12.7億美元，迪士尼顛峰作品，奧斯卡與金球獎最佳動畫長片贏家，奧斯卡主題曲「Let It Go」家喻戶曉，國語版由Janet謝怡芬配音安娜、搞笑天王阿Ken獻聲雪寶、「星光幫」劉軒蓁、林芯儀聯手配唱多首名曲。</p>
+						</div>	
 			  </div>
 				<div class="movie__card movie__card__6">
-						<a href="https://www.catchplay.com/video-xl31gb8Y-XVbt-Zv5R-O1m4-qNs6OnytEEV7">
-							<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0188/artworks/posters/DIS-TW-001-A0188-P1200.jpg">
-							<div class="movie__content">
-								<h4>冰雪奇緣（英語）</h4>
-								<p class="movie__des">史上最高票房動畫片，橫掃全球12.7億美元，迪士尼顛峰作品，奧斯卡與金球獎最佳動畫長片贏家，奧斯卡主題曲「Let It Go」家喻戶曉，百老匯名伶伊迪娜曼佐與【阿姐萬萬醉】克莉絲汀貝爾聯合獻聲。</p>
-							</div>	
-						</a>
+						<a href="https://www.catchplay.com/video-xl31gb8Y-XVbt-Zv5R-O1m4-qNs6OnytEEV7"></a>
+						<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0188/artworks/posters/DIS-TW-001-A0188-P1200.jpg">
+						<div class="movie__content">
+							<h4>冰雪奇緣（英語）</h4>
+							<p class="movie__des">史上最高票房動畫片，橫掃全球12.7億美元，迪士尼顛峰作品，奧斯卡與金球獎最佳動畫長片贏家，奧斯卡主題曲「Let It Go」家喻戶曉，百老匯名伶伊迪娜曼佐與【阿姐萬萬醉】克莉絲汀貝爾聯合獻聲。</p>
+						</div>	
 		    </div>
 			</div>
 		</div>
