--- a/index.html
+++ b/index.html
@@ -71,195 +71,197 @@
 			</div>
 		</div>
 	</header>
-	<div class="img"></div>	
-	<div class="middletitle">	
-		<div class="middletitle__left">、
-			<img style="width: 100%" src="images/images/flower-left.png" alt="title__1">
-		</div>
-		<div class="middletitle__middle" >
-			<img style="width: 100%" src="images/images/title-1.png" alt="title__1">
-		</div>
-		<div class="middletitle__middle-mobile" >
-				<img style="width: 100%" src="images/images/title-1-m.png" alt="title__1">
-			</div>
-		<div class="middletitle__right">
-			<img style="width: 100%" src="images/images/flower-right.png" alt="title__1">
-		</div>	
-	</div>	
-	<div class="main_des">
-		<img class="main_des__img_left" src="images/images/character-left.png" alt="pic">
-		<div class="main_des__img_middle">
-			<img style="width: 100%" src="images/images/action-large.png" alt="pic">
-		</div>
-		<img class="main_des__img_right" src="images/images/character-right.png" alt="pic">
-		<a href="https://goo.gl/1qKod2" class="button__join">立即加入</a>
-		<a href="#" class="button__watch">立即觀看</a>
-	</div>	
-	<div class="main__des-mobile">
-		<p>
-			<span>活動期間加入CATCHPLAY ON DEMAND 成為會員並觀看《可可夜總會》《雪寶的佳節冒險》《冰雪奇緣》將有機會獲得電影限量贈品！快跟米高與雪寶一起追夢冒險吧！</span>
-		</p>
-		<div class="main__des-mobile-pic">
-			<img class="main_des__img_top1" src="images/images/action-1.png" alt="pic">	
-			  <p class="main_des-des1">
-					<span>活動期間加入成為會員並觀看任一部動畫即可抽小雪寶一隻或可可夜總會文具組或製冰盒！</span>
+	<section>
+			<div class="img"></div>	
+			<div class="middletitle">	
+				<div class="middletitle__left">、
+					<img style="width: 100%" src="images/images/flower-left.png" alt="title__1">
+				</div>
+				<div class="middletitle__middle" >
+					<img style="width: 100%" src="images/images/title-1.png" alt="title__1">
+				</div>
+				<div class="middletitle__middle-mobile" >
+						<img style="width: 100%" src="images/images/title-1-m.png" alt="title__1">
+					</div>
+				<div class="middletitle__right">
+					<img style="width: 100%" src="images/images/flower-right.png" alt="title__1">
+				</div>	
+			</div>	
+			<div class="main_des">
+				<img class="main_des__img_left" src="images/images/character-left.png" alt="pic">
+				<div class="main_des__img_middle">
+					<img style="width: 100%" src="images/images/action-large.png" alt="pic">
+				</div>
+				<img class="main_des__img_right" src="images/images/character-right.png" alt="pic">
+				<a href="https://goo.gl/1qKod2" class="button__join">立即加入</a>
+				<a href="#" class="button__watch">立即觀看</a>
+			</div>	
+			<div class="main__des-mobile">
+				<p>
+					<span>活動期間加入CATCHPLAY ON DEMAND 成為會員並觀看《可可夜總會》《雪寶的佳節冒險》《冰雪奇緣》將有機會獲得電影限量贈品！快跟米高與雪寶一起追夢冒險吧！</span>
 				</p>
-			<img class="main_des__img_top2" src="images/images/prize-1.png" alt="pic">
-			<a href="https://goo.gl/1qKod2" class="button__join">立即加入</a>	
-			<img class="main_des__img_top3" src="images/images/action-2.png" alt="pic">	
-			<p class="main_des-des2">
-					<span>活動期間在 CATCHPLAY ON DEMAND 觀看任兩部動畫即可抽《雪寶的佳節冒險》電影立體場景1座、《可可夜總會》精美書籤、造型托特包或隨身碟!</span>
-				</p>
-			<img class="main_des__img_top4" src="images/images/prize-2.png" alt="pic">
-			<a href="#" class="button__watch">立即觀看</a>	
-		</div>	
-	</div>	
-	<div class="downtitle">	
-		<div class="downtitle__left">
-			<img style="width: 100%" src="images/images/flower-left.png" alt="title__1">
-		</div>
-		<div class="downtitle__middle" >
-			<img style="width: 100%" src="images/images/title-2.png" alt="title__1">
-		</div>
-		<div class="downtitle__right">
-			<img style="width: 100%" src="images/images/flower-right.png" alt="title__1">
-		</div>	
-	</div>	
-	<div class="movie">
-		<div class="movie__card movie__card__1 slide">
-			<a href="https://www.catchplay.com/tw/video-23224254-d5b3-4c00-abf5-7759beb78362">
-				<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0219/artworks/posters/DIS-TW-001-A0219-P1200.jpg">
-				<img class="movie__hover" src="images/icons/cp-play-btn.svg">
-				<div class="movie__content">
-					<h4>可可夜總會（英語）</h4>
-					<p class="movie__des">全球7億美金票房保證，金球獎最佳動畫長片得主、奧斯卡最佳動畫長片、原創歌曲入圍，皮克斯再創奇幻冒險高峰，帶來笑中有淚的家庭團聚故事，【冰雪奇緣】奧斯卡金獎作曲夫妻檔再次打造洗腦電影主題曲。</p>
+				<div class="main__des-mobile-pic">
+					<img class="main_des__img_top1" src="images/images/action-1.png" alt="pic">	
+						<p class="main_des-des1">
+							<span>活動期間加入成為會員並觀看任一部動畫即可抽小雪寶一隻或可可夜總會文具組或製冰盒！</span>
+						</p>
+					<img class="main_des__img_top2" src="images/images/prize-1.png" alt="pic">
+					<a href="https://goo.gl/1qKod2" class="button__join">立即加入</a>	
+					<img class="main_des__img_top3" src="images/images/action-2.png" alt="pic">	
+					<p class="main_des-des2">
+							<span>活動期間在 CATCHPLAY ON DEMAND 觀看任兩部動畫即可抽《雪寶的佳節冒險》電影立體場景1座、《可可夜總會》精美書籤、造型托特包或隨身碟!</span>
+						</p>
+					<img class="main_des__img_top4" src="images/images/prize-2.png" alt="pic">
+					<a href="#" class="button__watch">立即觀看</a>	
 				</div>	
-			</a>
-		</div>
-		<div class="movie__card movie__card__2">
-			<a href="https://www.catchplay.com/video-ad69147c-f383-4977-bf10-deb9fe944778">
-				<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0223/artworks/posters/DIS-TW-001-A0223-P1200.jpg">
-				<img class="movie__hover" src="images/icons/cp-play-btn.svg">
-				<div class="movie__content">
-					<h4>可可夜總會（國語）</h4>
-					<p class="movie__des">全球7億美金票房保證，金曲歌王蕭敬騰配音骷顱人並獻唱片中3首歌曲、奧斯卡最佳動畫長片、原創歌曲入圍，皮克斯以墨西哥亡靈節為背景，帶來笑中有淚的家庭團聚故事，【冰雪奇緣】奧斯卡金獎作曲夫妻檔再次打造洗腦電影主題曲。</p>
+			</div>	
+			<div class="downtitle">	
+				<div class="downtitle__left">
+					<img style="width: 100%" src="images/images/flower-left.png" alt="title__1">
+				</div>
+				<div class="downtitle__middle" >
+					<img style="width: 100%" src="images/images/title-2.png" alt="title__1">
+				</div>
+				<div class="downtitle__right">
+					<img style="width: 100%" src="images/images/flower-right.png" alt="title__1">
 				</div>	
-			</a>
-		</div>
-		<div class="movie__card movie__card__3">
-			<a href="https://www.catchplay.com/video-XVHJ9QD0-iVJT-52Yq-6m5S-MTdQYkkHH9JB">
-				<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0221/artworks/posters/DIS-TW-001-A0221-P1200.jpg">
-				<img class="movie__hover" src="images/icons/cp-play-btn.svg">
-				<div class="movie__content">
-					<h4>雪寶的佳節冒險（國語）</h4>
-					<p class="movie__des">跟著迪士尼史上最賣座動畫電影【冰雪奇緣】主人翁艾莎女王、安娜公主一起找尋聖誕節的真諦！本片還超值附贈長達46分鐘的迪士尼聖誕經典短片，包括米奇、唐老鴨、與高飛狗等迪士尼巨星齊聚，帶給全家大小一段難忘的冬日美好時光。</p>
-				</div>	
-			</a>
-		</div>
-		<div class="movie__card movie__card__4">
-			<a href="https://www.catchplay.com/video-mgxAqgg1-kpGL-BtfO-EsC7-cbnk22uSVNMa">
-				<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0222/artworks/posters/DIS-TW-001-A0222-P1200.jpg">
-				<img class="movie__hover" src="images/icons/cp-play-btn.svg">
-				<div class="movie__content">
-					<h4>雪寶的佳節冒險（英語）</h4>
-					<p class="movie__des">跟著迪士尼史上最賣座動畫電影【冰雪奇緣】主人翁艾莎女王、安娜公主一起找尋聖誕節的真諦！本片還超值附贈長達46分鐘的迪士尼聖誕經典短片，包括米奇、唐老鴨、與高飛狗等迪士尼巨星齊聚，帶給全家大小一段難忘的冬日美好時光。</p>
-				</div>	
-			</a>
-		</div>
-		<div class="movie__card movie__card__5">
-				<a href="https://www.catchplay.com/video-5QmHfop5-4uIp-QPXA-QO7j-T5fch1SOIrl8">
-					<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0211/artworks/posters/DIS-TW-001-A0211-P1200.jpg">
-					<img class="movie__hover" src="images/icons/cp-play-btn.svg">
-					<div class="movie__content">
-						<h4>冰雪奇緣（國語）</h4>
-						<p class="movie__des">史上最高票房動畫片，橫掃全球12.7億美元，迪士尼顛峰作品，奧斯卡與金球獎最佳動畫長片贏家，奧斯卡主題曲「Let It Go」家喻戶曉，國語版由Janet謝怡芬配音安娜、搞笑天王阿Ken獻聲雪寶、「星光幫」劉軒蓁、林芯儀聯手配唱多首名曲。</p>
-					</div>	
-				</a>
-		</div>
-		<div class="movie__card movie__card__6">
-				<a href="https://www.catchplay.com/video-xl31gb8Y-XVbt-Zv5R-O1m4-qNs6OnytEEV7">
-					<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0188/artworks/posters/DIS-TW-001-A0188-P1200.jpg">
-					<img class="movie__hover" src="images/icons/cp-play-btn.svg">
-					<div class="movie__content">
-						<h4>冰雪奇緣（英語）</h4>
-						<p class="movie__des">史上最高票房動畫片，橫掃全球12.7億美元，迪士尼顛峰作品，奧斯卡與金球獎最佳動畫長片贏家，奧斯卡主題曲「Let It Go」家喻戶曉，百老匯名伶伊迪娜曼佐與【阿姐萬萬醉】克莉絲汀貝爾聯合獻聲。</p>
-					</div>	
-				</a>
-		</div>
-	</div>
-	<div class="movie__mobile">
-			<div class="center">
-				<div class="movie__card movie__card__1">
-						<a href="https://www.catchplay.com/tw/video-23224254-d5b3-4c00-abf5-7759beb78362"></a>
+			</div>	
+			<div class="movie">
+				<div class="movie__card movie__card__1 slide">
+					<a href="https://www.catchplay.com/tw/video-23224254-d5b3-4c00-abf5-7759beb78362">
 						<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0219/artworks/posters/DIS-TW-001-A0219-P1200.jpg">
+						<img class="movie__hover" src="images/icons/cp-play-btn.svg">
 						<div class="movie__content">
 							<h4>可可夜總會（英語）</h4>
 							<p class="movie__des">全球7億美金票房保證，金球獎最佳動畫長片得主、奧斯卡最佳動畫長片、原創歌曲入圍，皮克斯再創奇幻冒險高峰，帶來笑中有淚的家庭團聚故事，【冰雪奇緣】奧斯卡金獎作曲夫妻檔再次打造洗腦電影主題曲。</p>
 						</div>	
+					</a>
 				</div>
 				<div class="movie__card movie__card__2">
-						<a href="https://www.catchplay.com/video-ad69147c-f383-4977-bf10-deb9fe944778"></a>
+					<a href="https://www.catchplay.com/video-ad69147c-f383-4977-bf10-deb9fe944778">
 						<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0223/artworks/posters/DIS-TW-001-A0223-P1200.jpg">
+						<img class="movie__hover" src="images/icons/cp-play-btn.svg">
 						<div class="movie__content">
 							<h4>可可夜總會（國語）</h4>
 							<p class="movie__des">全球7億美金票房保證，金曲歌王蕭敬騰配音骷顱人並獻唱片中3首歌曲、奧斯卡最佳動畫長片、原創歌曲入圍，皮克斯以墨西哥亡靈節為背景，帶來笑中有淚的家庭團聚故事，【冰雪奇緣】奧斯卡金獎作曲夫妻檔再次打造洗腦電影主題曲。</p>
 						</div>	
+					</a>
 				</div>
 				<div class="movie__card movie__card__3">
-						<a href="https://www.catchplay.com/video-XVHJ9QD0-iVJT-52Yq-6m5S-MTdQYkkHH9JB"></a>
+					<a href="https://www.catchplay.com/video-XVHJ9QD0-iVJT-52Yq-6m5S-MTdQYkkHH9JB">
 						<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0221/artworks/posters/DIS-TW-001-A0221-P1200.jpg">
+						<img class="movie__hover" src="images/icons/cp-play-btn.svg">
 						<div class="movie__content">
 							<h4>雪寶的佳節冒險（國語）</h4>
 							<p class="movie__des">跟著迪士尼史上最賣座動畫電影【冰雪奇緣】主人翁艾莎女王、安娜公主一起找尋聖誕節的真諦！本片還超值附贈長達46分鐘的迪士尼聖誕經典短片，包括米奇、唐老鴨、與高飛狗等迪士尼巨星齊聚，帶給全家大小一段難忘的冬日美好時光。</p>
-						</div>
+						</div>	
+					</a>
 				</div>
 				<div class="movie__card movie__card__4">
-						<a href="https://www.catchplay.com/video-mgxAqgg1-kpGL-BtfO-EsC7-cbnk22uSVNMa"></a>
+					<a href="https://www.catchplay.com/video-mgxAqgg1-kpGL-BtfO-EsC7-cbnk22uSVNMa">
 						<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0222/artworks/posters/DIS-TW-001-A0222-P1200.jpg">
+						<img class="movie__hover" src="images/icons/cp-play-btn.svg">
 						<div class="movie__content">
 							<h4>雪寶的佳節冒險（英語）</h4>
 							<p class="movie__des">跟著迪士尼史上最賣座動畫電影【冰雪奇緣】主人翁艾莎女王、安娜公主一起找尋聖誕節的真諦！本片還超值附贈長達46分鐘的迪士尼聖誕經典短片，包括米奇、唐老鴨、與高飛狗等迪士尼巨星齊聚，帶給全家大小一段難忘的冬日美好時光。</p>
-						</div>
+						</div>	
+					</a>
 				</div>
 				<div class="movie__card movie__card__5">
-						<a href="https://www.catchplay.com/video-5QmHfop5-4uIp-QPXA-QO7j-T5fch1SOIrl8"></a>
-						<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0211/artworks/posters/DIS-TW-001-A0211-P1200.jpg">
-						<div class="movie__content">
-							<h4>冰雪奇緣（國語）</h4>
-							<p class="movie__des">史上最高票房動畫片，橫掃全球12.7億美元，迪士尼顛峰作品，奧斯卡與金球獎最佳動畫長片贏家，奧斯卡主題曲「Let It Go」家喻戶曉，國語版由Janet謝怡芬配音安娜、搞笑天王阿Ken獻聲雪寶、「星光幫」劉軒蓁、林芯儀聯手配唱多首名曲。</p>
-						</div>	
-			  </div>
+						<a href="https://www.catchplay.com/video-5QmHfop5-4uIp-QPXA-QO7j-T5fch1SOIrl8">
+							<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0211/artworks/posters/DIS-TW-001-A0211-P1200.jpg">
+							<img class="movie__hover" src="images/icons/cp-play-btn.svg">
+							<div class="movie__content">
+								<h4>冰雪奇緣（國語）</h4>
+								<p class="movie__des">史上最高票房動畫片，橫掃全球12.7億美元，迪士尼顛峰作品，奧斯卡與金球獎最佳動畫長片贏家，奧斯卡主題曲「Let It Go」家喻戶曉，國語版由Janet謝怡芬配音安娜、搞笑天王阿Ken獻聲雪寶、「星光幫」劉軒蓁、林芯儀聯手配唱多首名曲。</p>
+							</div>	
+						</a>
+				</div>
 				<div class="movie__card movie__card__6">
-						<a href="https://www.catchplay.com/video-xl31gb8Y-XVbt-Zv5R-O1m4-qNs6OnytEEV7"></a>
-						<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0188/artworks/posters/DIS-TW-001-A0188-P1200.jpg">
-						<div class="movie__content">
-							<h4>冰雪奇緣（英語）</h4>
-							<p class="movie__des">史上最高票房動畫片，橫掃全球12.7億美元，迪士尼顛峰作品，奧斯卡與金球獎最佳動畫長片贏家，奧斯卡主題曲「Let It Go」家喻戶曉，百老匯名伶伊迪娜曼佐與【阿姐萬萬醉】克莉絲汀貝爾聯合獻聲。</p>
-						</div>	
-		    </div>
+						<a href="https://www.catchplay.com/video-xl31gb8Y-XVbt-Zv5R-O1m4-qNs6OnytEEV7">
+							<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0188/artworks/posters/DIS-TW-001-A0188-P1200.jpg">
+							<img class="movie__hover" src="images/icons/cp-play-btn.svg">
+							<div class="movie__content">
+								<h4>冰雪奇緣（英語）</h4>
+								<p class="movie__des">史上最高票房動畫片，橫掃全球12.7億美元，迪士尼顛峰作品，奧斯卡與金球獎最佳動畫長片贏家，奧斯卡主題曲「Let It Go」家喻戶曉，百老匯名伶伊迪娜曼佐與【阿姐萬萬醉】克莉絲汀貝爾聯合獻聲。</p>
+							</div>	
+						</a>
+				</div>
 			</div>
-		</div>
-	<footer class="footer">
-		<a class="footer__logo-box" href="https://www.catchplay.com/">
-			<img class="footer__logo" src="images/icons/cp-logo.png " alt="catchplaylogo">
-		</a> 
-		<div class="footer__download">
-			<img class="footer__download_apple" src="images/icons/app-store.svg" alt="appstore">
-			<img class="footer__download_google" src="images/icons/google-play.svg" alt="googleplay">
-		</div>
-		<div class="footer__other">
-			<nav class="footer__box">
-				<ul class="footer__item list-inline">
-					<li><a class="footer__item-item list-inline-item" href="https://www.catchplay.com/info/faq">常見問題</a></li>
-					<li class="list-inline-item">|</li>
-					<li><a class="footer__item-item list-inline-item" href="https://www.catchplay.com/plan-intro">方案介紹</a></li>
-					<li class="list-inline-item">|</li>
-					<li><a class="footer__item-item list-inline-item" href="https://www.catchplay.com/info/contact-us">聯絡客服</a></li>
-				</ul>
-			</nav>
-			<div class="footer__copyright">Copyright©2018 ASIAPLAY TAIWAN DIGITAL ENTERTAINMENT LTD. ALL RIGHTS RESERVED.</div>	
-		</div>	
-	</footer>	
+			<div class="movie__mobile">
+					<div class="center">
+						<div class="movie__card movie__card__1">
+								<a href="https://www.catchplay.com/tw/video-23224254-d5b3-4c00-abf5-7759beb78362"></a>
+								<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0219/artworks/posters/DIS-TW-001-A0219-P1200.jpg">
+								<div class="movie__content">
+									<h4>可可夜總會（英語）</h4>
+									<p class="movie__des">全球7億美金票房保證，金球獎最佳動畫長片得主、奧斯卡最佳動畫長片、原創歌曲入圍，皮克斯再創奇幻冒險高峰，帶來笑中有淚的家庭團聚故事，【冰雪奇緣】奧斯卡金獎作曲夫妻檔再次打造洗腦電影主題曲。</p>
+								</div>	
+						</div>
+						<div class="movie__card movie__card__2">
+								<a href="https://www.catchplay.com/video-ad69147c-f383-4977-bf10-deb9fe944778"></a>
+								<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0223/artworks/posters/DIS-TW-001-A0223-P1200.jpg">
+								<div class="movie__content">
+									<h4>可可夜總會（國語）</h4>
+									<p class="movie__des">全球7億美金票房保證，金曲歌王蕭敬騰配音骷顱人並獻唱片中3首歌曲、奧斯卡最佳動畫長片、原創歌曲入圍，皮克斯以墨西哥亡靈節為背景，帶來笑中有淚的家庭團聚故事，【冰雪奇緣】奧斯卡金獎作曲夫妻檔再次打造洗腦電影主題曲。</p>
+								</div>	
+						</div>
+						<div class="movie__card movie__card__3">
+								<a href="https://www.catchplay.com/video-XVHJ9QD0-iVJT-52Yq-6m5S-MTdQYkkHH9JB"></a>
+								<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0221/artworks/posters/DIS-TW-001-A0221-P1200.jpg">
+								<div class="movie__content">
+									<h4>雪寶的佳節冒險（國語）</h4>
+									<p class="movie__des">跟著迪士尼史上最賣座動畫電影【冰雪奇緣】主人翁艾莎女王、安娜公主一起找尋聖誕節的真諦！本片還超值附贈長達46分鐘的迪士尼聖誕經典短片，包括米奇、唐老鴨、與高飛狗等迪士尼巨星齊聚，帶給全家大小一段難忘的冬日美好時光。</p>
+								</div>
+						</div>
+						<div class="movie__card movie__card__4">
+								<a href="https://www.catchplay.com/video-mgxAqgg1-kpGL-BtfO-EsC7-cbnk22uSVNMa"></a>
+								<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0222/artworks/posters/DIS-TW-001-A0222-P1200.jpg">
+								<div class="movie__content">
+									<h4>雪寶的佳節冒險（英語）</h4>
+									<p class="movie__des">跟著迪士尼史上最賣座動畫電影【冰雪奇緣】主人翁艾莎女王、安娜公主一起找尋聖誕節的真諦！本片還超值附贈長達46分鐘的迪士尼聖誕經典短片，包括米奇、唐老鴨、與高飛狗等迪士尼巨星齊聚，帶給全家大小一段難忘的冬日美好時光。</p>
+								</div>
+						</div>
+						<div class="movie__card movie__card__5">
+								<a href="https://www.catchplay.com/video-5QmHfop5-4uIp-QPXA-QO7j-T5fch1SOIrl8"></a>
+								<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0211/artworks/posters/DIS-TW-001-A0211-P1200.jpg">
+								<div class="movie__content">
+									<h4>冰雪奇緣（國語）</h4>
+									<p class="movie__des">史上最高票房動畫片，橫掃全球12.7億美元，迪士尼顛峰作品，奧斯卡與金球獎最佳動畫長片贏家，奧斯卡主題曲「Let It Go」家喻戶曉，國語版由Janet謝怡芬配音安娜、搞笑天王阿Ken獻聲雪寶、「星光幫」劉軒蓁、林芯儀聯手配唱多首名曲。</p>
+								</div>	
+						</div>
+						<div class="movie__card movie__card__6">
+								<a href="https://www.catchplay.com/video-xl31gb8Y-XVbt-Zv5R-O1m4-qNs6OnytEEV7"></a>
+								<img class="movie__poster" src="https://dkfhw9rzsr80z.cloudfront.net/DIS-TW-001-A0188/artworks/posters/DIS-TW-001-A0188-P1200.jpg">
+								<div class="movie__content">
+									<h4>冰雪奇緣（英語）</h4>
+									<p class="movie__des">史上最高票房動畫片，橫掃全球12.7億美元，迪士尼顛峰作品，奧斯卡與金球獎最佳動畫長片贏家，奧斯卡主題曲「Let It Go」家喻戶曉，百老匯名伶伊迪娜曼佐與【阿姐萬萬醉】克莉絲汀貝爾聯合獻聲。</p>
+								</div>	
+						</div>
+					</div>
+				</div>
+			<footer class="footer">
+				<a class="footer__logo-box" href="https://www.catchplay.com/">
+					<img class="footer__logo" src="images/icons/cp-logo.png " alt="catchplaylogo">
+				</a> 
+				<div class="footer__download">
+					<img class="footer__download_apple" src="images/icons/app-store.svg" alt="appstore">
+					<img class="footer__download_google" src="images/icons/google-play.svg" alt="googleplay">
+				</div>
+				<div class="footer__other">
+					<nav class="footer__box">
+						<ul class="footer__item list-inline">
+							<li><a class="footer__item-item list-inline-item" href="https://www.catchplay.com/info/faq">常見問題</a></li>
+							<li class="list-inline-item">|</li>
+							<li><a class="footer__item-item list-inline-item" href="https://www.catchplay.com/plan-intro">方案介紹</a></li>
+							<li class="list-inline-item">|</li>
+							<li><a class="footer__item-item list-inline-item" href="https://www.catchplay.com/info/contact-us">聯絡客服</a></li>
+						</ul>
+					</nav>
+					<div class="footer__copyright">Copyright©2018 ASIAPLAY TAIWAN DIGITAL ENTERTAINMENT LTD. ALL RIGHTS RESERVED.</div>	
+				</div>	
+			</footer>	
+	</section>	
 	</body>
 	<script src="script.js"></script>
 </html>
